Hand cards in vector